# saas-doc-intelligence

./: .editorconfig  .gitignore  CLAUDE.md  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  create_test_user.py  debug_db.py  fix.sql  fix_user.py  force_install.py  install_packages.bat  pyproject.toml  run_tests.py  test_admin_stats.py  test_gemini.py  test_imports.py
backend/apps/admin_ops/: apps.py
backend/apps/audit_observability/: admin.py  apps.py  models.py  services.py
backend/apps/audit_observability/migrations/: 0001_initial.py
backend/apps/conversations/: admin.py  models.py
backend/apps/conversations/api/: serializers.py  urls.py  views.py
backend/apps/conversations/migrations/: 0001_initial.py
backend/apps/core/: constants.py  exceptions.py  logging.py  middleware.py  models.py  pagination.py  permissions.py  urls.py  utils.py
backend/apps/documents/: admin.py  models.py
backend/apps/documents/api/: serializers.py  (+2 more)
backend/apps/identity_access/: admin.py  apps.py  backends.py  models.py
backend/apps/ingestion/: admin.py  models.py  tasks.py
backend/apps/retrieval/: admin.py  models.py
backend/apps/tenancy/: admin.py  models.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  staging.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: seed_dev.py  smoke_test.py
backend/scripts/debug/: force_user.py  test_tenants.py
backend/tests/: conftest.py  test_isolation.py
backend/workers/: celery_app.py
(+85 files in other folders)
